<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment"
>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:background="@drawable/vt_backgroud2"
    />


    <TextView
            android:id="@+id/textGrid"
            android:text="Sistema Unipar"
            android:textSize="40dp"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
    />

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textGrid"
            android:rowCount="3"
            android:columnCount="2"
            android:layout_margin="20dp"
            >

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="lancarFrequencia"
        >
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">
                <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_frequencia_inverted"
                        app:tint="@color/red_unipar_700"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_cadatro_frequencia"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="2"
                android:layout_margin="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                android:onClick="lancarNotas"
        >
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">
                <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_nota_inverted"
                        app:tint="@color/red_unipar_700"


                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_cadastro_notas"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/cv_professor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                android:onClick="professores"
        >
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">
                <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_professor_inverted"
                        app:tint="@color/red_unipar_700"

                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_cadastro_professor"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                android:onClick="alunos"
        >
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">
                <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_aluno_inverted"
                        app:tint="@color/red_unipar_700"

                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_cadastra_aluno"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                android:onClick="disciplinas"
        >
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_disciplina_inverted"
                        app:tint="@color/red_unipar_700"

                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_cadatro_disciplina"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                android:onClick="turmas"
        >
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center_vertical|center_horizontal">
                <ImageView
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_turma_inverted"
                        app:tint="@color/red_unipar_700"

                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_cadatro_turma"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>

